src/test/resources/semantic_errors/scope_leak_if_else.notc
void main() {
    if (true)
        int i = 0;
    else
        i = 1;
}
